Feat: 프로필 화면 구현

--- a/index.html
+++ b/index.html
@@ -182,11 +182,156 @@
           </li>
         </ul>
       </nav>
+
+      <div class="profile__content">
+        <!-- 프로필 이미지 및 개인 사이트 링크 -->
+        <div class="profile__content--left">
+          <div class="profile__image__group">
+            <!-- 파티 이미지 -->
+            <svg
+              class="profile__party__image"
+              width="56"
+              height="56"
+              viewBox="0 0 56 56"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M28.0001 0L30.0924 14.1961L36.2764 1.24746L34.0914 15.4296L43.8172 4.87897L37.5493 17.787L49.9527 10.5719L40.1585 21.0589L54.1377 17.8203L41.6874 24.9546L56 25.9802L42 29.1277L55.3746 34.3266L41.0689 33.2078L52.3167 42.1179L38.9765 36.832L47.0983 48.6616L35.9086 39.6783L40.1828 53.3765L32.1382 41.4941L32.185 55.8435L28.0001 42.1179L23.8151 55.8435L23.8619 41.4941L15.8172 53.3765L20.0915 39.6783L8.90178 48.6616L17.0237 36.832L3.68331 42.1179L14.9312 33.2078L0.625466 34.3266L14 29.1277L0 25.9802L14.3128 24.9546L1.86244 17.8203L15.8417 21.0589L6.04736 10.5719L18.4508 17.787L12.1828 4.87897L21.9087 15.4296L19.7237 1.24746L25.9077 14.1961L28.0001 0Z"
+                fill="white"
+              />
+            </svg>
+
+            <!-- 반짝이 이미지 -->
+            <svg
+              class="profile__sparkle__image"
+              width="19"
+              height="28"
+              viewBox="0 0 19 28"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M9.50391 3.40137C9.9405 5.85999 10.8332 8.06202 12.0508 9.80957C13.3619 11.6914 15.0607 13.0578 16.9785 13.6299C15.0548 14.2035 13.3519 15.5781 12.0391 17.4688C10.8193 19.2254 9.92708 21.4394 9.49512 23.9102C9.05844 21.452 8.16659 19.2502 6.94922 17.5029C5.6378 15.6207 3.93877 14.2535 2.02051 13.6816C3.94443 13.1081 5.64792 11.7346 6.96094 9.84375C8.18079 8.08696 9.07199 5.87239 9.50391 3.40137Z"
+                stroke="white"
+                stroke-width="0.59375"
+              />
+            </svg>
+
+            <!-- 색상이 채워진 반짝이 이미지 -->
+            <svg
+              class="profile__fill-sparkle__image"
+              width="21"
+              height="34"
+              viewBox="0 0 21 34"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M10.3525 4.51074C10.8423 7.45136 11.7912 10.0873 13.0752 12.1934C14.5024 14.5343 16.3631 16.2507 18.4775 16.9678C16.3567 17.6869 14.4915 19.4128 13.0625 21.7646C11.7761 23.882 10.8278 26.5325 10.3428 29.4883C9.85296 26.5481 8.90393 23.9125 7.62012 21.8066C6.19263 19.4652 4.33176 17.748 2.2168 17.0312C4.33796 16.3123 6.20365 14.5875 7.63281 12.2354C8.91936 10.1178 9.86753 7.46684 10.3525 4.51074Z"
+                fill="white"
+                stroke="white"
+                stroke-width="0.73913"
+              />
+            </svg>
+
+            <!-- 왼쪽 스프링 이미지 -->
+            <svg
+              class="profile__spiral__image--left"
+              width="47"
+              height="47"
+              viewBox="0 0 47 47"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M46.552 8.47374C40.2908 2.13694 33.3023 -1.11002 30.9427 1.22139C28.5832 3.5528 31.7461 10.5797 38.0073 16.9165C41.5163 20.4678 45.1706 22.5467 46.1694 21.5598C47.1682 20.5729 45.1333 16.8939 41.6244 13.3426C35.3632 7.00578 28.3747 3.75882 26.0151 6.09023C23.6556 8.42165 26.8184 15.4486 33.0796 21.7854C36.5886 25.3367 40.2429 27.4156 41.2418 26.4286C42.2406 25.4417 40.2057 21.7627 36.6968 18.2114C30.4355 11.8746 23.4353 8.63927 21.0613 10.985C18.6873 13.3307 21.8384 20.3692 28.0996 26.7061C31.6086 30.2574 35.2629 32.3362 36.2618 31.3493C37.2606 30.3623 35.2256 26.6834 31.7167 23.1321C25.4554 16.7953 18.4671 13.5483 16.1075 15.8797C13.7479 18.2111 16.9109 25.238 23.1721 31.5748C26.6811 35.1261 30.3353 37.2051 31.3341 36.2181C32.333 35.2312 30.2981 31.5522 26.7892 28.0009C20.5279 21.6641 13.5394 18.4172 11.1798 20.7486C8.82027 23.08 11.9832 30.1069 18.2445 36.4437C21.7534 39.995 25.4077 42.0738 26.4065 41.087C27.4053 40.1001 25.3705 36.4211 21.8615 32.8698C15.6003 26.533 8.61174 23.2861 6.25233 25.6174C3.89277 27.9488 7.05558 34.9758 13.3168 41.3126C16.8258 44.8639 20.4801 46.9427 21.479 45.9558C22.4777 44.969 20.4428 41.29 16.9339 37.7386C10.6726 31.4018 3.6725 28.1664 1.2985 30.5121C-1.07551 32.8578 2.07556 39.8964 8.33679 46.2332"
+                stroke="white"
+                stroke-width="0.634525"
+                stroke-linecap="round"
+              />
+            </svg>
+
+            <!-- 오른쪽 스프링 이미지 -->
+            <svg
+              class="profile__spiral__image--right"
+              width="47"
+              height="47"
+              viewBox="0 0 47 47"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M46.552 8.47374C40.2908 2.13694 33.3023 -1.11002 30.9427 1.22139C28.5832 3.5528 31.7461 10.5797 38.0073 16.9165C41.5163 20.4678 45.1706 22.5467 46.1694 21.5598C47.1682 20.5729 45.1333 16.8939 41.6244 13.3426C35.3632 7.00578 28.3747 3.75882 26.0151 6.09023C23.6556 8.42165 26.8184 15.4486 33.0796 21.7854C36.5886 25.3367 40.2429 27.4156 41.2418 26.4286C42.2406 25.4417 40.2057 21.7627 36.6968 18.2114C30.4355 11.8746 23.4353 8.63927 21.0613 10.985C18.6873 13.3307 21.8384 20.3692 28.0996 26.7061C31.6086 30.2574 35.2629 32.3362 36.2618 31.3493C37.2606 30.3623 35.2256 26.6834 31.7167 23.1321C25.4554 16.7953 18.4671 13.5483 16.1075 15.8797C13.7479 18.2111 16.9109 25.238 23.1721 31.5748C26.6811 35.1261 30.3353 37.2051 31.3341 36.2181C32.333 35.2312 30.2981 31.5522 26.7892 28.0009C20.5279 21.6641 13.5394 18.4172 11.1798 20.7486C8.82027 23.08 11.9832 30.1069 18.2445 36.4437C21.7534 39.995 25.4077 42.0738 26.4065 41.087C27.4053 40.1001 25.3705 36.4211 21.8615 32.8698C15.6003 26.533 8.61174 23.2861 6.25233 25.6174C3.89277 27.9488 7.05558 34.9758 13.3168 41.3126C16.8258 44.8639 20.4801 46.9427 21.479 45.9558C22.4777 44.969 20.4428 41.29 16.9339 37.7386C10.6726 31.4018 3.6725 28.1664 1.2985 30.5121C-1.07551 32.8578 2.07556 39.8964 8.33679 46.2332"
+                stroke="white"
+                stroke-width="0.634525"
+                stroke-linecap="round"
+              />
+            </svg>
+
+            <img
+              class="profile__me__image"
+              src="images/profile/me.png"
+              alt="프로필 이미지"
+            />
+          </div>
+
+          <!-- 프로필 링크 리스트 -->
+          <ul class="profile__link__list">
+            <li class="profile__link__item">
+              <a href="https://na-dev.netlify.app/" target="_blank">Resume</a>
+            </li>
+            <li class="profile__link__item">
+              <a href="https://github.com/hyoni0817" target="_blank">Github</a>
+            </li>
+            <li class="profile__link__item">
+              <a href="https://dev-sisun.tistory.com/" target="_blank">Blog</a>
+            </li>
+          </ul>
+        </div>
+
+        <!-- 내 소개 -->
+        <div class="profile__content--right">
+          <div class="profile__intro">
+            <h1 class="profile__intro__title">
+              숲을 보며 일하는 개발자, 이나현 입니다.
+            </h1>
+            <p class="profile__intro__text">
+              저는 단순히 맡은 일만 하는 개발자는 아닙니다.<br />
+              제게 주어진 일이 미치는 영향을 생각하고, 더 나은 결과를 이끌어
+              내기 위해 많은 고민을 하며 개발합니다.
+            </p>
+
+            <p class="profile__intro__text">
+              저조했던 사용자 설문조사 방문수를 단기간에 2배로 개선한 경험이
+              있고, 광고 수익 개선을 위해 직접 Google Analytics에 페이지별
+              스크롤 분석 보고서를 생성해서 분석한 후 애드센스 위치 선정 결정에
+              활용한 경험이 있습니다.
+            </p>
+
+            <p class="profile__intro__text">
+              또한 익숙한 기술에 안주하지 않습니다. <br />
+              생산성을 높일 수 있고, 더 나은 코드로 개선하기 위해 꾸준히 온라인
+              컨퍼런스 참여 및 사이드 프로젝트를 진행하고 있습니다.
+              <br />
+              이를 통해 다양한 코드 작성 형태, 라이브러리, 툴을 충분히 익히고
+              생산성을 높일 수 있는 부분은 사내 프로젝트에 도입했습니다.
+            </p>
+
+            <p class="profile__intro__text">
+              이 외에도 개발일지를 꾸준히 작성하며 부족한 부분을 채워나가고
+              있으며, 현재는 다양한 개발 분야를 접하고 싶어서 앱 개발을 공부하고
+              있는 중입니다.
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- gsap -->
     <script src="js/gsap.min.js"></script>
     <script src="js/infiniteLoopAnimation.js"></script>
+    <script src="js/svgAnimations.js"></script>
     <script src="js/slide.js"></script>
 
     <script>
