Feat: 개찰구 클릭 후 프로필 페이지로 이동하게 수정
- 개찰구를 클릭하고 나면 5초 뒤에 프로필 페이지로 이동하게 수정함.

--- a/index.html
+++ b/index.html
@@ -328,6 +328,11 @@
       </div>
     </section>
 
+    <script>
+      // 현재 활성 슬라이드 추적
+      let currentSlide = 0; // 0: home, 1: profile, 2: project
+    </script>
+
     <!-- gsap -->
     <script src="js/gsap.min.js"></script>
     <script src="js/infiniteLoopAnimation.js"></script>
