Feat: 개인 프로젝트에 Health Log 프로젝트 추가 및 모든 details 태그에 open 속성 추가
- 프로젝트 개수가 많아서 토글을 열고 닫는 게 힘들 거라고 판단하여 open 속성을 추가해 줌.

--- a/index.html
+++ b/index.html
@@ -191,6 +191,57 @@
             <div class="contents wow fadeInUp">
                 <div class="container">
                     <p class="project-part-name">Personal</p>
+                      <div class="card mb-3" >
+                        <div class="row no-gutters">
+                            <div class="col-md-4 card-image-border img-fixed" >
+                                <div class="project-img6">
+                                    <div class="title-and-move-btn">
+                                        <div class="project-title">
+                                            <h5 class="card-title">Health Log</h5>     
+                                        </div>
+                                        <div class="site-move">
+                                            <button class="project-site-btn"><a class="project-site-btn-link" href="http://13.125.229.209:3000/" target="_blank">Demo</a></button>
+                                            <button class="project-site-btn"><a class="project-site-btn-link" href="https://github.com/hyoni0817/health-log" target="_blank">Github</a></button>
+                                            <button class="project-site-btn"><a class="project-site-btn-link" href="https://steadfast-cardinal-956.notion.site/Health-Log-1f8216b709e280c2841af2fafeb5dcfe" target="_blank">개발 일지</a></button>
+                                        </div>
+                                    </div> 
+                                </div>
+                            </div>
+                            <div class="col-md-8 card-body-border">
+                                <div class="card-body">
+                                    <p class="project-subtitle">프로젝트 소개</p>
+                                    <div class="project-contents">
+                                        혈당 및 혈압 관리를 도와주는 웹앱
+                                    </div>
+                                    <p class="project-subtitle">맡은 역할 및 개발 기간</p>
+                                    <div class="project-contents">
+                                        프론트엔드·백엔드 개발 / 2025년 5월 19일 ~ 진행중
+                                    </div>
+                                    <p class="project-subtitle">사용한 기술</p>
+                                    <div class="project-skills">
+                                        <p class="skill-name">React</p>
+                                        <p class="skill-name">Next.js</p>
+                                        <p class="skill-name">React Query</p>
+                                        <p class="skill-name">Tailwind CSS</p>
+                                        <p class="skill-name">Chart.js</p>
+                                    </div>
+                                    <details class="project-performance-tasks" open>
+                                        <summary class="project-subtitle">
+                                            진행한 일 및 배운 점
+                                        </summary>
+                                        <div>
+                                            <ul>
+                                              <li>평소에 사용해 보고 싶었던 Tailwind CSS를 사용하면서 클래스 이름을 고민하지 않아도 되고 유지 보수할 때 바로 스타일을 수정할 수 있다는 장점을 느낄 수 있었음. </li>
+                                              <li>기능 단위별로 코드를 관리할 수 있도록 FSD를 적용하여, 유지보수성과 재사용성을 높였음.</li>
+                                              <li>유지보수를 쉽게 하기 위해 React Query의 쿼리 함수와 키를 관리하기 위해 쿼리 팩토리 적용</li>
+                                              <li>FSD와 React Query를 실무에 적용하면서 막연하고 알고 있던 부분들을 깊이 이해하고 올바르게 다루는 법을 배움</li>
+                                            </ul>
+                                        </div>
+                                    </details>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="card mb-3" >
                         <div class="row no-gutters">
                             <div class="col-md-4 card-image-border img-fixed" >
@@ -230,7 +281,7 @@
                                         <p class="skill-name">Sequelize</p>
                                         <p class="skill-name">AWS(EC2, RDS)</p>
                                     </div>
-                                    <details class="project-performance-tasks">
+                                    <details class="project-performance-tasks" open>
                                         <summary class="project-subtitle">
                                             진행한 일 및 배운 점
                                         </summary>
@@ -282,7 +333,7 @@
                                         <p class="skill-name">AWS(EC2)</p>
                                         <p class="skill-name">Socket.io</p>
                                     </div>   
-                                    <details class="project-performance-tasks">
+                                    <details class="project-performance-tasks" open>
                                         <summary class="project-subtitle">
                                             진행한 일 및 배운 점
                                         </summary>
@@ -308,7 +359,6 @@
                                             <h5 class="card-title">식당 예약 웹 사이트</h5>   
                                         </div>
                                         <div class="site-move">
-                                            <button class="project-site-btn"><a class="project-site-btn-link" href="http://13.125.220.200:3000/" target="_blank">Demo</a></button>
                                             <button class="project-site-btn"><a class="project-site-btn-link" href="https://github.com/hyoni0817/Reservation-Website-Project" target="_blank">Github</a></button>
                                         </div>  
                                     </div>
@@ -322,7 +372,7 @@
                                     </div>
                                     <p class="project-subtitle">맡은 역할 및 개발 기간</p>
                                     <div class="project-contents">
-                                        프론트엔드·백엔드 개발 / 2017년 6월 ~ 계속 업데이트 중
+                                        프론트엔드·백엔드 개발 / 2017년 6월 ~ 2019.07
                                     </div>
                                     <p class="project-subtitle">사용한 기술</p>
                                     <div class="project-skills">
@@ -336,7 +386,7 @@
                                         <p class="skill-name">MySQL</p>
                                         <p class="skill-name">AWS(EC2, S3, RDS)</p>
                                     </div>                          
-                                    <details class="project-performance-tasks">
+                                    <details class="project-performance-tasks" open>
                                         <summary class="project-subtitle">
                                             진행한 일 및 배운 점
                                         </summary>
@@ -395,7 +445,7 @@
                                         <p class="skill-name">Redux</p>
                                         <p class="skill-name">Redux-Saga</p>
                                     </div>   
-                                    <details class="project-performance-tasks">
+                                    <details class="project-performance-tasks" open>
                                         <summary class="project-subtitle">
                                             진행한 일 및 배운 점
                                         </summary>
@@ -447,7 +497,7 @@
                                         <p class="skill-name">AWS(EC2, S3, RDS)</p>
                                         <p class="skill-name">Firebase Cloud Messaging</p>
                                     </div>   
-                                    <details class="project-performance-tasks">
+                                    <details class="project-performance-tasks" open>
                                         <summary class="project-subtitle">
                                             진행한 일 및 배운 점
                                         </summary>
