Feat: 개인 프로젝트에 Health Log With Flask 프로젝트 추가

--- a/index.html
+++ b/index.html
@@ -194,6 +194,58 @@
                       <div class="card mb-3" >
                         <div class="row no-gutters">
                             <div class="col-md-4 card-image-border img-fixed" >
+                                <div class="project-img7">
+                                    <div class="title-and-move-btn">
+                                        <div class="project-title">
+                                            <h5 class="card-title">Health Log with Flask</h5>     
+                                        </div>
+                                        <div class="site-move">
+                                            <button class="project-site-btn"><a class="project-site-btn-link" href="http://13.125.229.209:4000/" target="_blank">Demo</a></button>
+                                            <button class="project-site-btn"><a class="project-site-btn-link" href="https://github.com/hyoni0817/jinja2-health-log" target="_blank">Github</a></button>
+                                            <button class="project-site-btn"><a class="project-site-btn-link" href="https://dev-sisun.tistory.com/category/%EA%B0%9C%EB%B0%9C%20%EC%A7%80%EC%8B%9D/Flask%EC%99%80%20Jinja2" target="_blank">블로그 기록</a></button>
+                                        </div>
+                                    </div> 
+                                </div>
+                            </div>
+                            <div class="col-md-8 card-body-border">
+                                <div class="card-body">
+                                    <p class="project-subtitle">프로젝트 소개</p>
+                                    <div class="project-contents">
+                                        이미 Next.js로 기획 및 개발된 프로젝트를 Flask와 Jinja2로 다시 개발한 혈당 및 혈압 관리를 도와주는 웹앱
+                                    </div>
+                                    <p class="project-subtitle">맡은 역할 및 개발 기간</p>
+                                    <div class="project-contents">
+                                        프론트엔드·백엔드 개발 / 2025년 11월 1일 ~ 11월 3일
+                                    </div>
+                                    <p class="project-subtitle">사용한 기술</p>
+                                    <div class="project-skills">
+                                        <p class="skill-name">Flask</p>
+                                        <p class="skill-name">Jinja2</p>
+                                        <p class="skill-name">HTML</p>
+                                        <p class="skill-name">Javascript</p>
+                                        <p class="skill-name">SCSS</p>
+                                        <p class="skill-name">Supabase</p>
+                                    </div>
+                                    <details class="project-performance-tasks" open>
+                                        <summary class="project-subtitle">
+                                            진행한 일 및 배운 점
+                                        </summary>
+                                        <div>
+                                            <ul>
+                                              <li>기존 Next.js 프로젝트를 Flask와 Jinja2로 리팩토링하며 기술을 빠르게 습득하고자 개발을 진행</li>
+                                              <li>초반 설치 과정을 블로그에 기록하며, 사용될 기술의 문법과 활용법을 익힘</li>
+                                              <li>기존 JS 코드를 Python 코드로 변환하며, 프로그래밍 언어의 특성을 이해하고 활용할 수 있게 됨</li>
+                                              <li>Next.js에서 개발하던 습관 때문에 폴더 구조나 데이터 로드 방식에 대해 고민이 있었지만, Flask의 러닝 커브가 낮아서 금방 적응할 수 있었음</li>
+                                            </ul>
+                                        </div>
+                                    </details>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                      <div class="card mb-3" >
+                        <div class="row no-gutters">
+                            <div class="col-md-4 card-image-border img-fixed" >
                                 <div class="project-img6">
                                     <div class="title-and-move-btn">
                                         <div class="project-title">
@@ -234,6 +286,7 @@
                                               <li>평소에 사용해 보고 싶었던 Tailwind CSS를 사용하면서 클래스 이름을 고민하지 않아도 되고 유지 보수할 때 바로 스타일을 수정할 수 있다는 장점을 느낄 수 있었음. </li>
                                               <li>기능 단위별로 코드를 관리할 수 있도록 FSD를 적용하여, 유지보수성과 재사용성을 높였음.</li>
                                               <li>유지보수를 쉽게 하기 위해 React Query의 쿼리 함수와 키를 관리하기 위해 쿼리 팩토리 적용</li>
+                                              <li>Supabase API를 활용해 프론트엔드와 백엔드 간 데이터 통신을 빠르게 구축함</li>
                                               <li>FSD와 React Query를 실무에 적용하면서 막연하고 알고 있던 부분들을 깊이 이해하고 올바르게 다루는 법을 배움</li>
                                             </ul>
                                         </div>
