Feat: 팀 프로젝트에 룸렛 프로젝트 추가

--- a/index.html
+++ b/index.html
@@ -458,6 +458,62 @@
                     </div>
                     <p class="project-part-name">Team</p>
                     <div class="card mb-3" >
+                      <div class="row no-gutters">
+                          <div class="col-md-4 card-image-border img-fixed" >
+                              <div class="project-img8">
+                                  <div class="title-and-move-btn">
+                                      <div class="project-title">
+                                          <h5 class="card-title">룸렛</h5>   
+                                      </div>
+                                      <div class="site-move">
+                                        <button class="project-site-btn"><a class="project-site-btn-link" href="https://roomlet.store/" target="_blank">Demo</a></button>
+                                          <button class="project-site-btn"><a class="project-site-btn-link" href="https://github.com/Roomlet-team/roomlet-front" target="_blank">Github</a></button>
+                                      </div> 
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="col-md-8 card-body-border">
+                              <div class="card-body" id="jikpool-project-card-body">
+                                  <p class="project-subtitle">프로젝트 소개</p>
+                                  <div class="project-contents">
+                                    모바일 웹 기반 회의실 예약 및 일정 관리 솔루션
+                                  </div>
+                                  <p class="project-subtitle">팀 구성원</p>
+                                  <div class="project-contents">
+                                    기획자 1명, 디자이너 1명, 프론트엔드 개발자 1명, 백엔드 개발자 1명
+                                  </div>
+                                  <p class="project-subtitle">맡은 역할 및 개발 기간</p>
+                                  <div class="project-contents">
+                                      프론트엔드 개발 / 2024.01 ~ 2025.10
+                                  </div>
+                                  <p class="project-subtitle">사용한 기술</p>
+                                  <div class="project-skills">
+                                      <p class="skill-name">React</p>
+                                      <p class="skill-name">Next.js</p>
+                                      <p class="skill-name">Typescript</p>
+                                      <p class="skill-name">StyleX</p>
+                                      <p class="skill-name">CSS Modules</p>
+                                      <p class="skill-name">React Query</p>
+                                  </div>   
+                                  <details class="project-performance-tasks" open>
+                                      <summary class="project-subtitle">
+                                          진행한 일 및 배운 점
+                                      </summary>
+                                      <div>
+                                          <ul>
+                                              <li>하나만 있는 회의실을 원하는 시간대에 사용하기 어려워서 회의실 예약 및 일정 관리 웹 사이트를 개발</li>
+                                              <li>모바일 사용자를 먼저 고려하여 웹 개발을 진행</li>
+                                              <li>새로운 라이브러리에 대한 습득력을 높이고 직관적인 CSS 스타일 선언을 지향해서 stylex를 사용</li>
+                                              <li>Redux를 사용할 때보다 간소화된 코드를 작성하기 위해 Redux toolkit을 사용</li>
+                                              <li>해당 사이드 프로젝트를 통해 새로운 시도나 실험적인 접근을 자유롭게 한 경험이 실무에서의 문제 해결력 향상으로 이어짐</li>
+                                          </ul>
+                                      </div>
+                                  </details>             
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                    <div class="card mb-3" >
                         <div class="row no-gutters">
                             <div class="col-md-4 card-image-border img-fixed" >
                                 <div class="project-img5">
