Update: Skills 내용 수정

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                 <p class="lang-title">Javascript</p>
                                 <div>
                                     <ul class="lang-ability">
-                                        <li>ES6, ES5를 사용하여 개발</li>
+                                        <li>ES5, ES6 외에도 최신 자바스크립트 문법을 사용하여 개발</li>
                                         <li>Ajax를 이용하여 비동기 통신 처리</li>
                                         <li>VanillaJS로 개발 가능</li>
                                         <li>jQuery3.x 사용</li>        
@@ -138,9 +138,10 @@
                                 <div>
                                     <ul class="lang-ability">
                                         <li>Hooks를 사용하여 개발</li>
-                                        <li>Next.js를 사용하여 SPA 개발 및 SSR 처리</li>
+                                        <li>Next.js의 SSR을 통해 SEO 개선</li>
                                         <li>Redux를 사용해 State 관리</li>
                                         <li>Redux-Saga를 통해 비동기 액션 처리</li>
+                                        <li>React Query를 사용하여 서버 데이터 fetch 및 캐싱</li>
                                         <li>UI 구성 시 Material-UI, Ant Design, Styled-components 사용</li>
                                     </ul>
                                 </div>
@@ -157,7 +158,6 @@
                                         <ul class="lang-ability">
                                             <li>Express.js 사용하여 서버 구축</li>
                                             <li>REST API 설계</li>
-                                            <li>MySQL 모듈 및 Sequelize로 MySQL을 연동하여 CRUD 구현</li>
                                         </ul>
                                     </div>
                                 </div>
